[gd_scene load_steps=3 format=2]

[ext_resource path="res://menu.png" type="Texture" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="MenuSlide" type="Position2D" parent="."]

[node name="Spawn" type="Position2D" parent="MenuSlide"]
position = Vector2( 692, -60 )

[node name="Sprite" type="Sprite" parent="MenuSlide"]
position = Vector2( 515, 450 )
scale = Vector2( 1.01074, 1.01222 )
texture = ExtResource( 1 )

[node name="BLevels" type="Button" parent="MenuSlide"]
modulate = Color( 1, 1, 1, 0.231373 )
margin_left = 33.0
margin_top = 382.0
margin_right = 381.0
margin_bottom = 467.0

[node name="BEasy" type="Button" parent="MenuSlide"]
modulate = Color( 1, 1, 1, 0.231373 )
margin_left = 27.0
margin_top = 685.0
margin_right = 196.0
margin_bottom = 759.0

[node name="BMedium" type="Button" parent="MenuSlide"]
modulate = Color( 1, 1, 1, 0.231373 )
margin_left = 184.0
margin_top = 791.0
margin_right = 421.0
margin_bottom = 872.0

[node name="BHard" type="Button" parent="MenuSlide"]
modulate = Color( 1, 1, 1, 0.231373 )
margin_left = 422.0
margin_top = 685.0
margin_right = 596.0
margin_bottom = 755.0

[node name="BInsanity" type="Button" parent="MenuSlide"]
modulate = Color( 1, 1, 1, 0.231373 )
margin_left = 679.0
margin_top = 778.0
margin_right = 945.0
margin_bottom = 853.0

[node name="RespawnFloor" type="Position2D" parent="MenuSlide"]
position = Vector2( 705, 1127 )

[connection signal="pressed" from="MenuSlide/BLevels" to="." method="_on_BLevels_pressed"]
[connection signal="pressed" from="MenuSlide/BEasy" to="." method="_on_BEasy_pressed"]
[connection signal="pressed" from="MenuSlide/BMedium" to="." method="_on_BMedium_pressed"]
[connection signal="pressed" from="MenuSlide/BHard" to="." method="_on_BHard_pressed"]
[connection signal="pressed" from="MenuSlide/BInsanity" to="." method="_on_BInsanity_pressed"]
